Fix alignment with box divs and decrease div size

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-bottom: 50px;
 }
 
@@ -114,7 +114,7 @@ header {
     background-color: #F9FAF8;
     display: flex;
     flex-direction: column;
-    height: 600px;
+    height: 500px;
 }
 
 .information-container h3 {
@@ -127,22 +127,26 @@ header {
 .box-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 40px;
+    flex-wrap: wrap;
+    flex: 1;
+    margin-bottom: 60px;
 }
 
 .box-align {
     display: flex;
     flex-direction: column;
-    width: 160px;
+    width: 170px;
     align-items: center;
 }
 
 .box {
-    border: 2px solid blue;
-    width: 150px;
-    height: 150px;
+    border: 3px solid #3882F6;
+    width: 170px;
+    height: 180px;
     margin-bottom: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 .box-align .text {
@@ -154,6 +158,7 @@ header {
 .quote-container {
     background-color: #E5E7EB;
     display: flex;
+    height: 400px;
 }
 
 .action-container {
